Code cleanup, fixes, and feature addition
- First class citizen.
- Fix case where singular values may be singular matrix by using its reciprocal.
- Add preserve alpha layer feature.
- Add automatic backend detection and switchable backend.
- Support for GPU, yay!
- Add changeable iteration step.
- Add scale input (0~1).
- Rename eigenLimit to eigenRatio (0~1).
- Separate SVD and Eigen source code.
- Update backend to reflect the changes.
- Add request validation in backend.
- Add extras require for JAX (alingeo[jax-cpu] and alingeo[gpu]).
- Some docstrings here and there.
