# src/backend/swagger.yml
@@ -26,14 +26,20 @@ paths:
             schema:
               required:
               - imageFile
-              - eigenLimit
+              - eigenRatio
+              - scale
               type: object
               properties:
                 imageFile:
                   type: string
                   format: binary
-                eigenLimit:
+                eigenRatio:
+                  type: number
+                  minimum: 0
+                  maximum: 1
+                scale:
                   type: integer
+                  maximum: 100
                   minimum: 1
         required: true
       responses:
